# ode_solver_tool

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  uml.txt
config/: config.hh  config_test.yaml  config_test_ExplAB4.yaml  config_test_ExplABcustomCoef.yaml  config_test_ExplCustomRK.yaml  config_test_ExplFwdEuler.yaml  config_test_ExplRK4.yaml  config_test_ImplBwdEulerLinear.yaml  config_test_ImplBwdEulerNonlinear.yaml
config/main/: ODE_config.yaml
config/test/: config_test_ExplAB4.yaml  config_test_ExplAB4_bad.yaml  config_test_ExplABcustomCoef.yaml  config_test_ExplABcustomCoef_bad.yaml  config_test_ExplCustomRK.yaml  config_test_ExplCustomRK_bad.yaml  config_test_ExplFwdEuler.yaml  config_test_ExplFwdEuler_bad.yaml  config_test_ExplRK4.yaml  config_test_ExplRK4_bad.yaml  config_test_ImplBwdEulerLinear.yaml  config_test_ImplBwdEulerLinearGauss.yaml  config_test_ImplBwdEulerLinearLU.yaml  config_test_ImplBwdEulerLinearLU_bad.yaml  config_test_ImplBwdEulerLinearQR.yaml  config_test_ImplBwdEulerLinearQR_bad.yaml  config_test_ImplBwdEulerNonlinear.yaml  config_test_ImplBwdEulerNonlinear_bad.yaml  config_test_Parser.yaml  config_test_Parser_bad.yaml  config_test_PlanetRK4.yaml
src/: AdamsBashforth.cpp  AdamsBashforth.hh  AdamsBashforth.hpp  BackwardEuler.cc  BackwardEuler.cpp  BackwardEuler.hh  BackwardEuler.hpp  Explicit.cpp  Explicit.hh  Explicit.hpp  ForwardEuler.cc  ForwardEuler.cpp  ForwardEuler.hh  ForwardEuler.hpp  Implicit.cc  Implicit.cpp  Implicit.hh  Implicit.hpp  LinSysStruct.hh  OdeSolver.cc  OdeSolver.cpp  OdeSolver.hh  OdeSolver.hpp  RungeKutta.cpp  RungeKutta.hpp  main.cc
src/LinSysSolver/: GaussElimSolve.cc  GaussElimSolve.hh  LUSolve.cc  LUSolve.hh  LinSysSolver.cc  LinSysSolver.hh  QRSolve.cc  QRSolve.hh
src/Logger/: Logger.cc  Logger.hh
src/Ode/: AdamsBashforth.cc  AdamsBashforth.hh  BackwardEuler.cc  BackwardEuler.hh  Explicit.cc  Explicit.hh  ForwardEuler.cc  ForwardEuler.hh  Implicit.cc  Implicit.hh  OdeSolver.cc  OdeSolver.hh  RungeKutta.cc  RungeKutta.hh
src/Reader/: FunctionParser.cc  FunctionParser.hh  Reader.cc  Reader.hh
src/RootFinder/: NewtonRaphson.cc  NewtonRaphson.hh  RootFinder.cc  RootFinder.hh
src/Runner/: Runner.cc  Runner.hh
src/Utils/: LinSysStruct.hh  SettingsStruct.hh
src/Writer/: CSVWriter.cc  CSVWriter.hh
test/: test.cc
